Project buttons html

--- a/index.html
+++ b/index.html
@@ -57,108 +57,108 @@
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
             <div class="project">
                 <p>Title</p>
                 <p>Text content.</p>
                 <div class="buttons">
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
-                    <button class="icon"><img></button>
+                    <button><img src="Images/star.svg"></button>
+                    <button><img src="Images/eye.svg"></button>
+                    <button><img src="Images/branch.svg"></button>
                 </div>
             </div>
         </div>
