--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <input class="searchbar" type="search">
         </div>
         <div class="notification">
-            <a class="right"><img src="Images/bell.svg" href="#"></a>
-            <a class="center"><img src="Images/user.svg" href="#"></a>
-            <h3 class="left">Username</h3>
+            <a><img src="Images/bell.svg" href="#"></a>
+            <a><img src="Images/user.svg" href="#"></a>
+            <h3>Username</h3>
         </div>
         <div class="welcome">
             <img src="Images/user.svg" href="#">
