Announcement and Trends styling

--- a/index.html
+++ b/index.html
@@ -109,41 +109,55 @@
             </div>
         </div>
         <div class="annoucements">
-            <h3>Annoucements</h3>
-            <div class="annoucement">
-                <p>Site Maintaince</p>
-                <p>Text content...</p>
+            <div class="title">
+                <h3>Annoucements</h3>
             </div>
             <div class="annoucement">
-                <p>Community Share Day</p>
-                <p>Text content...</p>
-            </div>
-            <div class="annoucement">
-                <p>Updated Privacy Policy</p>
-                <p>Text content...</p>
+                <div>
+                    <h4>Site Maintaince</h4>
+                    <p>Text content...</p>
+                </div>
+                <div>
+                    <hr>
+                </div>
+                <div>
+                    <h4>Community Share Day</h4>
+                    <p>Text content...</p>
+                </div>
+                <div>
+                    <hr>
+                </div>
+                <div>
+                    <h4>Updated Privacy Policy</h4>
+                    <p>Text content...</p>
+                </div>
             </div>
         </div>
         <div class="trends">
-            <h3>Trending</h3>
             <div class="trend">
-                <img class="user">
-                <p>@username</p>
-                <p>Subtext.</p>
-            </div>
-            <div class="trend">
-                <img class="user">
-                <p>@username</p>
-                <p>Subtext.</p>
-            </div>
-            <div class="trend">
-                <img class="user">
-                <p>@username</p>
-                <p>Subtext.</p>
-            </div>
-            <div class="trend">
-                <img class="user">
-                <p>@username</p>
-                <p>Subtext.</p>
+                <div>
+                    <h3>Trending</h3>
+                </div>
+                <div>
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
+                </div>
+                <div>
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
+                </div>
+                <div>
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
+                </div>
+                <div>
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
+                </div>
             </div>
         </div>
     </main>
