--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3>Your Projects</h3>
             </div>
             <div class="project">
-                <p>Title</p>
+                <h4>Title</h4>
                 <p>Text content.</p>
                 <div class="buttons">
                     <button><img src="Images/star.svg"></button>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="project">
-                <p>Title</p>
+                <h4>Title</h4>
                 <p>Text content.</p>
                 <div class="buttons">
                     <button><img src="Images/star.svg"></button>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="project">
-                <p>Title</p>
+                <h4>Title</h4>
                 <p>Text content.</p>
                 <div class="buttons">
                     <button><img src="Images/star.svg"></button>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="project">
-                <p>Title</p>
+                <h4>Title</h4>
                 <p>Text content.</p>
                 <div class="buttons">
                     <button><img src="Images/star.svg"></button>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="project">
-                <p>Title</p>
+                <h4>Title</h4>
                 <p>Text content.</p>
                 <div class="buttons">
                     <button><img src="Images/star.svg"></button>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="project">
-                <p>Title</p>
+                <h4>Title</h4>
                 <p>Text content.</p>
                 <div class="buttons">
                     <button><img src="Images/star.svg"></button>
