--- a/index.html
+++ b/index.html
@@ -134,29 +134,37 @@
             </div>
         </div>
         <div class="trends">
+            <div>
+                <h3 class="title">Trending</h3>
+            </div>
             <div class="trend">
-                <div>
-                    <h3>Trending</h3>
+                <div class="userframe">
+                    <img class="user" src="Images/user.svg" href="#">
+                    <div>
+                        <h4>@username</h4>
+                        <p>Subtext.</p>
+                    </div>
                 </div>
-                <div>
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
+                <div class="userframe">
+                    <img class="user" src="Images/user.svg" href="#">
+                    <div>
+                        <h4>@username</h4>
+                        <p>Subtext.</p>
+                    </div>
                 </div>
-                <div>
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
+                <div class="userframe">
+                    <img class="user" src="Images/user.svg" href="#">
+                    <div>
+                        <h4>@username</h4>
+                        <p>Subtext.</p>
+                    </div>
                 </div>
-                <div>
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
-                </div>
-                <div>
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
+                <div class="userframe">
+                    <img class="user" src="Images/user.svg" href="#">
+                    <div>
+                        <h4>@username</h4>
+                        <p>Subtext.</p>
+                    </div>
                 </div>
             </div>
         </div>
