--- a/index.html
+++ b/index.html
@@ -53,58 +53,60 @@
             <div class="title">
                 <h3>Your Projects</h3>
             </div>
-            <div class="project">
-                <h4>Title</h4>
-                <p>Text content.</p>
-                <div class="buttons">
-                    <button><img src="Images/star.svg"></button>
-                    <button><img src="Images/eye.svg"></button>
-                    <button><img src="Images/branch.svg"></button>
+            <div class="cards">
+                <div class="card">
+                    <h4>Title</h4>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button><img src="Images/star.svg"></button>
+                        <button><img src="Images/eye.svg"></button>
+                        <button><img src="Images/branch.svg"></button>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <h4>Title</h4>
-                <p>Text content.</p>
-                <div class="buttons">
-                    <button><img src="Images/star.svg"></button>
-                    <button><img src="Images/eye.svg"></button>
-                    <button><img src="Images/branch.svg"></button>
+                <div class="card">
+                    <h4>Title</h4>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button><img src="Images/star.svg"></button>
+                        <button><img src="Images/eye.svg"></button>
+                        <button><img src="Images/branch.svg"></button>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <h4>Title</h4>
-                <p>Text content.</p>
-                <div class="buttons">
-                    <button><img src="Images/star.svg"></button>
-                    <button><img src="Images/eye.svg"></button>
-                    <button><img src="Images/branch.svg"></button>
+                <div class="card">
+                    <h4>Title</h4>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button><img src="Images/star.svg"></button>
+                        <button><img src="Images/eye.svg"></button>
+                        <button><img src="Images/branch.svg"></button>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <h4>Title</h4>
-                <p>Text content.</p>
-                <div class="buttons">
-                    <button><img src="Images/star.svg"></button>
-                    <button><img src="Images/eye.svg"></button>
-                    <button><img src="Images/branch.svg"></button>
+                <div class="card">
+                    <h4>Title</h4>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button><img src="Images/star.svg"></button>
+                        <button><img src="Images/eye.svg"></button>
+                        <button><img src="Images/branch.svg"></button>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <h4>Title</h4>
-                <p>Text content.</p>
-                <div class="buttons">
-                    <button><img src="Images/star.svg"></button>
-                    <button><img src="Images/eye.svg"></button>
-                    <button><img src="Images/branch.svg"></button>
+                <div class="card">
+                    <h4>Title</h4>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button><img src="Images/star.svg"></button>
+                        <button><img src="Images/eye.svg"></button>
+                        <button><img src="Images/branch.svg"></button>
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <h4>Title</h4>
-                <p>Text content.</p>
-                <div class="buttons">
-                    <button><img src="Images/star.svg"></button>
-                    <button><img src="Images/eye.svg"></button>
-                    <button><img src="Images/branch.svg"></button>
+                <div class="card">
+                    <h4>Title</h4>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button><img src="Images/star.svg"></button>
+                        <button><img src="Images/eye.svg"></button>
+                        <button><img src="Images/branch.svg"></button>
+                    </div>
                 </div>
             </div>
         </div>
