--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </div>
             <div class="cards">
                 <div class="card">
-                    <h4>Title</h4>
-                    <p>Text content.</p>
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id aliquet lectus...</p>
                     <div class="buttons">
                         <button><img src="Images/star.svg"></button>
                         <button><img src="Images/eye.svg"></button>
@@ -64,8 +64,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h4>Title</h4>
-                    <p>Text content.</p>
+                    <h4>Less Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan in nisl nisi scelerisque...</p>
                     <div class="buttons">
                         <button><img src="Images/star.svg"></button>
                         <button><img src="Images/eye.svg"></button>
@@ -73,8 +73,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h4>Title</h4>
-                    <p>Text content.</p>
+                    <h4>Impossible App</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut placerat orci nulla pellentesque dignissim enim sit...</p>
                     <div class="buttons">
                         <button><img src="Images/star.svg"></button>
                         <button><img src="Images/eye.svg"></button>
@@ -82,8 +82,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h4>Title</h4>
-                    <p>Text content.</p>
+                    <h4>Easy Peasy App</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quisque sagittis purus sit amet...</p>
                     <div class="buttons">
                         <button><img src="Images/star.svg"></button>
                         <button><img src="Images/eye.svg"></button>
@@ -91,8 +91,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h4>Title</h4>
-                    <p>Text content.</p>
+                    <h4>Ad Blocker</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In fermentum et sollicitudin ac orci phasellus egestas tellus...</p>
                     <div class="buttons">
                         <button><img src="Images/star.svg"></button>
                         <button><img src="Images/eye.svg"></button>
@@ -100,8 +100,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h4>Title</h4>
-                    <p>Text content.</p>
+                    <h4>Money Maker</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget nullam non...</p>
                     <div class="buttons">
                         <button><img src="Images/star.svg"></button>
                         <button><img src="Images/eye.svg"></button>
@@ -117,21 +117,21 @@
             <div class="annoucement">
                 <div>
                     <h4>Site Maintaince</h4>
-                    <p>Text content...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit...</p>
                 </div>
                 <div>
                     <hr>
                 </div>
                 <div>
                     <h4>Community Share Day</h4>
-                    <p>Text content...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo elit at imperdiet dui accumsan sit amet nulla...</p>
                 </div>
                 <div>
                     <hr>
                 </div>
                 <div>
                     <h4>Updated Privacy Policy</h4>
-                    <p>Text content...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam...</p>
                 </div>
             </div>
         </div>
